--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: https://noorchauhan.github.io
 # Owner/author information
 owner:
   name: Noor Chauhan
-  avatar: my.jpeg
+  avatar: hanlin.jpeg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: numerchauhan@gmail.com
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
