--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ google_verify: ""
 links:
   - title: About Me
     url: /
-  - title: Teams
-    url: /teams/
+  - title: Learn
+    url: /learn/
   - title: Publications
     url: /publications/
   - title: Awards
