--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,12 @@ owner:
   avatar: my.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: numerchauhan@gmail.com
-  cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
+  cv: https://noorchauhan.github.io/file/Noor_Chauhan.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: noorchauhn
   github: noorchauhan
   linkedin: noorchauhan
+  kaggle: https://kaggle.com/noorchauhan
   # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   # bilibili: 594030035
   # researchgate: https://www.researchgate.net/profile/Hanlin-Cai
